--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 
             <div class="header-nav">
 
-                <a href="#header">Home</a>
+                <a href="">Home</a>
                 <a href="">Sobre</a>
                 <a href="">Trabalho</a>
+                <a href="">Curriculo</a>
             </div>
         </section>
 
@@ -54,8 +55,8 @@
         <section id="presentation">
 
             <h3>// Bem-vindo !</h3>
-            <h1>Olá, eu sou o Pedro,</h1>
-            <h2>Desenvolvedor Web.</h2>
+            <h1 id="typing-1"></h1>
+            <h2 id="typing-2"></h2>
             <p>Profissional em desenvolvimento de sites.</p>
 
             <div class="vertical-line-presentation"></div>
@@ -83,7 +84,7 @@
         </section>
 
         <div class="whatsapp">
-            <a href="https://wa.me/5516981567198"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://wa.me/5516981567198" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
 
 
@@ -101,12 +102,17 @@
 
                 <div class="line-about-1"></div>
 
-                <p>Tenho 19 anos, moro no interior de São Paulo e desenvolvo sites desde 2025. Sou apaixonado por
-                    tecnologia e busco sempre
-                    aprimorar minhas habilidades em design e programação web.
+                <p>Tenho 19 anos, moro no interior de São Paulo e sou estudante em fase de conclusão do curso técnico em
+                    Análise e
+                    Desenvolvimento de Sistemas pela ETEC. Desenvolvo sites desde 2025 e sou apaixonado por tecnologia.
+                    Estou sempre em
+                    busca de aprimorar minhas habilidades em design e programação web, unindo criatividade e
+                    funcionalidade em cada projeto.
+
+
                 </p>
 
-                <a id="about-link" href="about.html">Saiba mais <span id="arrow-icon"><i
+                <a id="about-link" href="index-about.html" target="_blank">Saiba mais <span id="arrow-icon"><i
                             class="fa-solid fa-arrow-right"></i></span>
                 </a>
             </section>
@@ -127,6 +133,76 @@
             <h3><span>/ </span>Habilidades</h3>
 
             <h4>Lista de Habilidades</h4>
+
+
+            <section id="skills-container">
+
+                <div class="card-1"></div>
+                <div class="card-2"></div>
+                <div class="card-3"></div>
+
+            </section>
+
+            <section id="skills-text">
+
+                <div class="text-1">
+                    <span>
+                        <i class="fa-brands fa-html5"></i>
+                        <i class="fa-brands fa-css3-alt"></i>
+                    </span>
+                    <h2>
+                        HTML & CCS
+                    </h2>
+                    <p>
+                        HTML (HyperText Markup Language) é a linguagem usada para estruturar páginas da web. Com ele,
+                        definimos elementos como
+                        títulos, parágrafos, imagens, links e botões.
+
+                        CSS (Cascading Style Sheets) é responsável pela aparência visual desses elementos. Ele define
+                        cores, tamanhos,
+                        espaçamentos, fontes e efeitos visuais.
+
+                        Juntos, HTML e CSS criam o layout e o design de sites, formando a base do desenvolvimento
+                        front-end.
+                    </p>
+                </div>
+
+                <div class="text-2">
+                    <span>
+                        <i class="fa-brands fa-js"></i>
+                    </span>
+                    <h2>
+                        Javascript
+                    </h2>
+                    <p>
+                        JavaScript é uma linguagem de programação usada para tornar páginas da web interativas. Com ele,
+                        podemos criar
+                        animações, validar formulários, mostrar mensagens, controlar eventos (como cliques ou teclas) e
+                        modificar o conteúdo da
+                        página em tempo real.
+                    </p>
+
+                    <div class="text-3">
+                        <span>
+                            <i class="fa-brands fa-react"></i>
+                        </span>
+                        <h2>
+                            ReactJS
+                        </h2>
+                        <p>React.js é uma biblioteca JavaScript usada para construir interfaces de usuário (UI),
+                            especialmente em aplicações web.
+                            Criada pelo Facebook, ela facilita o desenvolvimento de páginas dinâmicas, rápidas e
+                            organizadas, permitindo dividir a
+                            interface em componentes reutilizáveis. React usa um conceito chamado DOM virtual, que
+                            melhora o desempenho ao atualizar
+                            só o que mudou na tela. É muito usada em sites modernos e aplicações interativas.</p>
+                    </div>
+
+                </div>
+
+
+            </section>
+
 
 
         </section>
