--- a/index-about.html
+++ b/index-about.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Portifólio, Operacional, Trabalho">
     <meta name="description" content="Personal Portfolio">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,19 +13,29 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="style-about.css">
+    <link rel="stylesheet" href="assets/css/style-about.css">
 
     <title>dev-about</title>
 </head>
 
 <body>
     <header>
+        <section id="container-header">
+            <div class="header-logo">
+                <i class="fa-solid fa-code"></i>
+                <span>dev.vasques</span>
+            </div>
 
-        <section id="nav-menu">
+            <div class="header-nav">
 
-            <h1>Sobre mim</h1>
-            <h3>Um pouco mais de quem eu sou !</h3>
-            <a href="">Sair</a>
+                <a href="index.html">Home</a>
+                <a href="">Sobre</a>
+                <a href="">Trabalho</a>
+                <a href="">Curriculo</a>
+            </div>
+        </section>
+
+
 
         </section>
 
@@ -36,9 +45,115 @@
     </header>
     <main>
 
+
+
+
+
+        <section id="about-myself">
+            <div class="about-title">
+                <h2>Sobre Mim</h2>
+                <h3>Conheça um pouco mais de quem eu sou ! </h3>
+            </div>
+
+
+            <div class="about-myself-text-1">
+                <p>
+                    Sou uma pessoa em constante evolução.
+
+                    Tenho 19 anos, moro no interior de São Paulo e estou em fase de conclusão do curso técnico em
+                    Análise e Desenvolvimento
+                    de Sistemas pela ETEC. Desde 2025, venho construindo minha trajetória no universo da tecnologia, com
+                    dedicação especial
+                    ao desenvolvimento web.
+
+                    Minha paixão pela área começou cedo, movida pela curiosidade de entender como os sites funcionam. Ao
+                    longo do tempo,
+                    essa curiosidade se transformou em vocação. Hoje, busco unir conhecimento técnico e criatividade
+                    para desenvolver
+                    soluções digitais modernas, funcionais e eficientes.
+                </p>
+
+                <div class="about-subtitle">O que eu faço ?</div>
+
+                <div class="about-myself-text-2">
+
+                    Trabalho na área de desenvolvimento web, criando sites e aplicações com foco em
+                    performance,
+                    responsividade e uma experiência fluida para o usuário.
+
+                    <div class="about-topics">
+
+                        Minhas principais atividades envolvem:
+
+                        <span>- Desenvolvimento de sites estáticos e dinâmicos</span>
+
+                        <span>- Criação de interfaces responsivas e acessíveis</span>
+
+                        <span>- Otimização de performance e boas práticas de SEO</span>
+
+                        <span>- Organização emanutenção de projetos com código limpo e escalável</span>
+                    </div>
+
+
+                </div>
+                <div class="about-myself-text-3">
+                    <p>
+                        Embora eu tenha conhecimentos em design, ele atua apenas como um complemento ao desenvolvimento.
+                        Utilizo o design para
+                        melhorar a apresentação dos projetos e garantir uma boa experiência visual, mas meu foco
+                        principal está na lógica,
+                        estrutura e funcionalidade do código.
+                    </p>
+
+                    <div class="about-subtitle-2">Minha missão</div>
+
+                    <div class="about-myself-text-4">
+                        <p>Meu objetivo é ajudar microempreendedores, empresas e designers a transformarem suas ideias
+                            em soluções digitais reais e
+                            eficazes. Entendo que muitos negócios precisam de presença online mas não sabem por onde
+                            começar — e é aí que eu entro,
+                            oferecendo suporte técnico com clareza, profissionalismo e comprometimento.
+
+                            A cada projeto, busco entender a necessidade do cliente para entregar não apenas um site,
+                            mas uma ferramenta útil,
+                            confiável e alinhadacom os objetivos do negócio.</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section id="about-img">
+
+            <img src="assets/img/IMAGEM2.jpg" alt="">
+
+        </section>
+
+
+
+
+
     </main>
 
     <footer>
+        <section id="baseboard-container">
+
+            <div class="baseboard-presentation">
+
+                <h2>
+                    Desenvolvido Por
+                </h2>
+
+                <h3>
+                    Pedro Henrique Vasques
+                </h3>
+
+                <div class="baseboard-logo">
+                    <i class="fa-brands fa-dev"></i>
+                </div>
+
+                <div class="baseboard-socialmedia">
 
     </footer>
 </body>
