--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="header-nav">
 
                 <a href="">Home</a>
-                <a href="">Sobre</a>
+                <a href="index-about.html">Sobre</a>
                 <a href="">Trabalho</a>
                 <a href="">Curriculo</a>
             </div>
@@ -91,6 +91,7 @@
 
 
 
+        </div>
         <section id="about">
 
 
@@ -101,6 +102,9 @@
                 <h3>Em constante evolução.</h3>
 
                 <div class="line-about-1"></div>
+                <div class="line-about-2"></div>
+
+
 
                 <p>Tenho 19 anos, moro no interior de São Paulo e sou estudante em fase de conclusão do curso técnico em
                     Análise e
@@ -112,7 +116,7 @@
 
                 </p>
 
-                <a id="about-link" href="index-about.html" target="_blank">Saiba mais <span id="arrow-icon"><i
+                <a id="about-link" href="index-about.html">Saiba mais <span id="arrow-icon"><i
                             class="fa-solid fa-arrow-right"></i></span>
                 </a>
             </section>
@@ -145,11 +149,18 @@
 
             <section id="skills-text">
 
+
+
+                <div class="line-skills-1"></div>
+
                 <div class="text-1">
                     <span>
                         <i class="fa-brands fa-html5"></i>
                         <i class="fa-brands fa-css3-alt"></i>
                     </span>
+
+                    <div class="line-skills-2"></div>
+
                     <h2>
                         HTML & CCS
                     </h2>
@@ -211,6 +222,23 @@
     </main>
 
     <footer>
+        <section id="baseboard-container">
+
+            <div class="baseboard-presentation">
+
+                <h2>
+                    Desenvolvido Por
+                </h2>
+
+                <h3>
+                    Pedro Henrique Vasques
+                </h3>
+
+                <div class="baseboard-logo">
+                    <i class="fa-brands fa-dev"></i>
+                </div>
+
+                <div class="baseboard-socialmedia">
 
     </footer>
 </body>
